fixed spacing now that navbar is no longer static

--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -16,7 +16,6 @@
     font-size: 20px;
     margin-left: auto; /* Center the text horizontally */
     margin-right: auto; /* Center the text horizontally */
-    padding-top: 80px;
 }
 
 
